# cannect-camera

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml
src/: demo_viewer.py  main.py  run_multicam.py  test_send.py
src/aggregation/: ad_tracker.py  counters.py  models.py  persistence.py
src/analysis/: __init__.py  attention.py  emotion.py  face_embedding.py  gender_age.py  head_pose.py
src/analytics/: attention_tracker.py  demographics.py  traffic_counter.py
src/capture/: camera_manager.py  grabber.py
src/config/: settings.py
src/detection/: face_detector.py  person_detector.py
src/publisher/: api_client.py  buffer.py
src/server/: api.py  auth.py
src/tracking/: bytetrack.py
src/utils/: api_client.py  camera_handler.py
systemd/: cv-analytics.service
tests/: test_cameras.py
