[project]
name = "cv-analytics"
version = "0.1.0"
description = "CANNECT.AI edge CV analytics module for Raspberry Pi 5"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.9.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "mediapipe>=0.10.9",
    "insightface>=0.7.3",
    "filterpy>=1.4.5",
    "scipy>=1.12.0",
    "lap>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
]
hailo = [
    "hailo-platform>=4.16.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
